# something-something-portfolio-app

./: .dockerignore  .env.deployment  .env.example  .flake8  .gitignore  CAROUSEL_CARD_FACTORY_PATTERN.md  CAROUSEL_CARD_PATTERN_COMPLETE.md  DRY_IMPROVEMENTS_SUMMARY.md  DUPLICATION_ELIMINATED.md  Dockerfile  LANDING_PAGE_DRY_TRANSFORMATION.md  README.md  REQUIRED-IAM-PERMISSIONS.md  SETUP-COMPLETE.md  build-push.sh  cloudbuild.yaml  fix_flake8.py  main.py  pyproject.toml  pytest.ini  setup-env.sh  test_card_pattern.py  test_media_detection.py
.github/workflows/: build-and-deploy.yml  ci-cd.yml  deploy.yml  test-and-merge.yml
app/: __init__.py  config.py  context_processor.py  error_handlers.py  routes.py  universal_card.py
app/core/: template_factory.py
app/data/: 400_error.py  404_error.py  500_error.py  achievements.py  all_data.py  card_factory.py  carousel_factory.py  constants.py  home_card.py  irl.py  landing_data.py  nothing_to_see_here.py  shared_data.py
app/static/css/: cards.css  custom.css  style.css  utility.css
app/static/js/: scripts.js
app/templates/: 400-page.html  404.html  500-page.html  achievements.html  base.html  connect.html  education.html  home.html  index.html  irl.html  me2u_place_landing.html  nothing_to_see_here.html  tech_stack.html  techstack.html  test.html
app/templates/backups/: achievements-backup.html  base.html  certifications.html  coming_soon.html  education.html  nothing_to_see_here.html  tech_stack.html
app/templates/components/: footer.html  header.html  navbar.html
app/templates/components/carousel/: achievement_card.html  arrow.html  carousel.html  dot.html
app/templates/components/common/: cards.html  carousel.html  dot.html  footer.html  horizontal_card.html  landing_card.html  landing_cards.html  landing_footer.html  landing_header.html  media.html  page_title.html  paragraphs.html  professional_info.html  purple_button.html  repeated_sections.html  sources.html  tech_section.html
app/templates/components/common/footer/: footer.html  footer_items.html
app/templates/components/common/header/: head.html
app/templates/components/common/navbar/: nav_items.html  navbar.html
app/templates/components/common/scripts/: scripts.html
app/templates/components/errors/: 400.html
app/templates/components/landing/: landing_content.html
app/templates/page_layouts/: card_grid_page.html  carousel_page.html  multi_section_page.html  single_card_page.html
app/templates/pages/: 400-page.html  404-page.html  500-page.html  achievements.html  certifications.html  connect.html  education.html  home.html  irl.html  landing.html  me2u_place_landing.html  techstack.html
app/utils/: template_helpers.py
me2u-venv-flask/: pyvenv.cfg
scripts/: .env.development  .env.example  .env.production  .gitignore  README.md  build-push.sh  colors.sh  config.sh  deploy-gcp-refactored.sh  deploy-gcp.sh  setup-env-new.sh  setup-env.sh  validate-config.py
tests/: conftest.py  test_app.py
